[package]
name = "ip-cli"
version = "0.1.0"
authors = ["Galen Guyer <galen@galenguyer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
error-chain = "0.12.4"
